# crypto-pocket-butler

./: .env.example  .gitignore  DOCKER_SETUP.md  NAMING_CONVENTION.md  README.md  crypto-pocket-butler.code-workspace  docker-compose.yml
api/: .dockerignore  Cargo.toml  DATABASE_SCHEMA.md  Dockerfile  OKX_IMPLEMENTATION.md  README.md  docker-compose.yml  docker-entrypoint.sh
api/.claude/: settings.local.json
api/migration/: Cargo.toml  cargo-up.ps1  cargo-up.sh
api/migration/src/: lib.rs  m20240101_000001_create_core_system.rs  m20240101_000002_create_assets_system.rs  m20240101_000002_create_portfolio_management_system.rs  m20240101_000003_create_assets_system.rs  m20240101_000004_create_portfolio_allocations.rs  m20240217_000001_refactor_assets_coinpaprika.rs  m20240218_000001_drop_asset_rankings.rs  m20260218_000001_fix_column_names.rs  m20260219_000001_symbol_name_uniqueness.rs  m20260219_000002_normalize_holdings.rs  m20260220_000001_create_evm_tokens.rs  m20260220_000002_create_evm_chains.rs  m20260220_000002_seed_evm_tokens.rs  m20260220_000003_rename_coingecko_id_to_coinpaprika_id.rs  m20260221_000001_create_solana_tokens.rs  m20260222_000001_add_native_symbol_to_evm_chains.rs  m20260223_000001_add_date_to_asset_prices.rs  m20260223_000002_create_holdings_and_transactions.rs
api/src/: db.rs  lib.rs  main.rs
api/src/concurrency/: mod.rs
api/src/connectors/: coingecko.rs  coinpaprika.rs  evm.rs  mod.rs  okx.rs  solana.rs
api/src/domain/: allocation.rs  holdings.rs  mod.rs
api/src/entities/: accounts.rs  asset_contracts.rs  asset_prices.rs  assets.rs  evm_chains.rs  evm_tokens.rs  holding_transactions.rs  holdings.rs  mod.rs  portfolios.rs  snapshots.rs  solana_tokens.rs  users.rs
api/src/handlers/: accounts.rs  chains.rs  error.rs  evm_chains.rs  evm_tokens.rs  jobs.rs  mod.rs  portfolios.rs  snapshots.rs  solana_tokens.rs
api/src/helpers/: ASSET_IDENTITY.md  asset_identity.rs  balance_normalization.rs  mod.rs
api/src/jobs/: account_sync.rs  contract_addresses_collection.rs  fetch_all_coins.rs  mod.rs  portfolio_snapshot.rs  price_collection.rs  top_coins_collection.rs
api/tests/: README.md  asset_rank_selection_test.rs  asset_uniqueness_test.rs  fetch_all_coins_integration_test.rs
backend-rust/: .env.example  .gitignore  CONCURRENCY.md  Cargo.toml  DATABASE_SCHEMA.md  README.md  docker-compose.yml
backend-rust/migration/src/: lib.rs  m20240101_000001_create_core_user_account_system.rs  m20240101_000001_create_users_table.rs  m20240101_000002_create_accounts_table.rs  m20240101_000002_create_portfolio_management_system.rs  m20240101_000003_create_portfolios_table.rs  m20240101_000004_create_portfolio_accounts_table.rs  m20240101_000004_create_portfolio_allocations.rs  m20240101_000005_create_snapshots_system.rs  m20240101_000005_create_snapshots_table.rs  m20240101_000006_add_holdings_to_accounts.rs  m20240101_000007_create_recommendations_table.rs  (+12 more)
backend-rust/src/: cache.rs  db.rs  lib.rs  main.rs
(+258 files in other folders)
