[package]
name = "crypto-pocket-butler-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-keycloak-auth = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
chrono = "0.4"
migration = { path = "./migration" }
log = "0.4"
uuid = { version = "1.0", features = ["serde", "v4"] }
num_cpus = "1.16"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rust_decimal = { version = "1.35", features = ["serde-with-str"] }
async-trait = "0.1"
alloy = { version = "1.6", features = ["full", "node-bindings", "rpc-types"] }
dotenvy = "0.15"
tokio-cron-scheduler = "0.13"
moka = { version = "0.12", features = ["future"] }
futures = "0.3"
coinpaprika-api = "0.1"
# Solana support temporarily disabled due to dependency conflicts with existing stack
# Will be enabled in a future update after dependency version alignment
# solana-client = "1.18"
# solana-sdk = "1.18"

