[package]
name = "crypto-pocket-butler-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-keycloak-auth = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

